@@ -560,6 +560,49 @@ test "uniform-distribution-1.1" "Test cdf-uniform" -match tolerant -body {
         [::math::statistics::cdf-uniform  -2.0 2.0  1.0]]
 } -result {0.5 0.5 0.5 0.75}
 
+test "triangular-distribution-1.0" "Test pdf-triangular" -match tolerant -body {
+    set x [list \
+        [::math::statistics::pdf-triangular   0   1.0 0.5]  \
+        [::math::statistics::pdf-triangular   1.0 0.0 0.5]  \
+        [::math::statistics::pdf-triangular   0.0 1.0 0.25] \
+        [::math::statistics::pdf-triangular   1.0 0.0 0.25] \
+        [::math::statistics::pdf-triangular   0.0 2.0 0.0]  \
+        [::math::statistics::pdf-triangular   0.0 2.0 1.0]  \
+        [::math::statistics::pdf-triangular   0.0 2.0 2.0]]
+} -result {1.0 1.0 1.5 0.5 2.0 1.0 0.0}
+test "triangular-distribution-1.1" "Test cdf-triangular" -match tolerant -body {
+    set x [list \
+        [::math::statistics::cdf-triangular   0   1.0  0.5] \
+        [::math::statistics::cdf-triangular   1.0 0.0  0.5] \
+        [::math::statistics::cdf-triangular   0.0 1.0  0.25] \
+        [::math::statistics::cdf-triangular   1.0 0.0  0.25] \
+        [::math::statistics::cdf-triangular   0.0 2.0  0.0] \
+        [::math::statistics::cdf-triangular   0.0 2.0  1.0] \
+        [::math::statistics::cdf-triangular   0.0 2.0  2.0]]
+} -result {0.75 0.25 0.4375 0.0625 0.0 0.75 1.0}
+
+test "triangular-symmetric-distribution-1.0" "Test pdf-symmetric-triangular" -match tolerant -body {
+    set x [list \
+        [::math::statistics::pdf-symmetric-triangular 0.0 2.0 -0.5]  \
+        [::math::statistics::pdf-symmetric-triangular 0.0 2.0  0.0]  \
+        [::math::statistics::pdf-symmetric-triangular 0.0 2.0  0.5]  \
+        [::math::statistics::pdf-symmetric-triangular 0.0 2.0  1.0]  \
+        [::math::statistics::pdf-symmetric-triangular 0.0 2.0  1.5]  \
+        [::math::statistics::pdf-symmetric-triangular 0.0 2.0  2.0]  \
+        [::math::statistics::pdf-symmetric-triangular 0.0 2.0  2.5]]
+} -result {0.0 0.0 0.5 1.0 0.5 0.0 0.0}
+
+test "triangular-symmetric-distribution-1.1" "Test cdf-symmetric-triangular" -match tolerant -body {
+    set x [list \
+        [::math::statistics::cdf-symmetric-triangular 0.0 2.0 -0.5]  \
+        [::math::statistics::cdf-symmetric-triangular 0.0 2.0  0.0]  \
+        [::math::statistics::cdf-symmetric-triangular 0.0 2.0  0.5]  \
+        [::math::statistics::cdf-symmetric-triangular 0.0 2.0  1.0]  \
+        [::math::statistics::cdf-symmetric-triangular 0.0 2.0  1.5]  \
+        [::math::statistics::cdf-symmetric-triangular 0.0 2.0  2.0]  \
+        [::math::statistics::cdf-symmetric-triangular 0.0 2.0  2.5]]
+} -result {0.0 0.0 0.125 0.5 0.875 1.0 1.0}
+
 test "exponential-distribution-1.0" "Test pdf-exponential" -match tolerant -body {
     set x [list \
         [::math::statistics::pdf-exponential 2   1] \
@@ -968,11 +1011,52 @@ test "random-numbers-1.11" "Test random-cauchy" -body {
     set result [llength $rnumbers]
 } -result 100
 
+test "random-numbers-1.12" "Test random-triangular" -body {
+    set result 1
+    set rnumbers [::math::statistics::random-triangular -10 10 100]
+    # Check the scaling
+    foreach r $rnumbers {
+        if { $r < -10.0 || $r > 10.0 } {
+            set result 0
+            break
+        }
+    }
+
+    # Also the alternative triangle
+    set rnumbers [::math::statistics::random-triangular 10 -10 100]
+    # Check the scaling
+    foreach r $rnumbers {
+        if { $r < -10.0 || $r > 10.0 } {
+            set result 0
+            break
+        }
+    }
+
+    # The symmetric triangle
+    set rnumbers [::math::statistics::random-symmetric-triangular 10 -10 100]
+    # Check the scaling
+    foreach r $rnumbers {
+        if { $r < -10.0 || $r > 10.0 } {
+            set result 0
+            break
+        }
+    }
+
+    set result
+} -result 1
+
 test "random-numbers-2.1" "Test estimate-pareto" -match tolerant -body {
     expr {srand($::rseed)}
     set rnumbers [::math::statistics::random-pareto 1.0 3.0 100]
     set result   [::math::statistics::estimate-pareto $rnumbers]
 } -result {1.000519 3.668162 0.3668162}
+
+test "random-numbers-2.2" "Test estimate-exponential" -match tolerant -body {
+    expr {srand($::rseed)}
+    set rnumbers [::math::statistics::random-exponential 2.0 1000]
+    set result   [::math::statistics::estimate-exponential $rnumbers]
+} -result {1.9976327295438587 0.06317069353857727}
+
 
 test "kruskal-wallis-1.0" "Test analysis Kruskal-Wallis" -match tolerant -body {
     ::math::statistics::analyse-Kruskal-Wallis {6.4 6.8 7.2 8.3 8.4 9.1 9.4 9.7} {2.5 3.7 4.9 5.4 5.9 8.1 8.2} {1.3 4.1 4.9 5.2 5.5 8.2}
